tests/NormalTests/paczka1/fuzzy1/83906091.err
Error in line 4: 1Yr S618 36,6
Error in line 9: 1Yr S14 32,0
Error in line 10: 1Yr S948 9,8
Error in line 13: 1Yr S618 12,9
Error in line 11: FcI S948 77,8
Error in line 16: lf8 A741 8,5
Error in line 6: iGoW1 S948 43,9
Error in line 25: iGoW1 S618 56,4
Error in line 36: iGoW1 S948 54,0
